--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "arqhillo",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://xipeRafa.github.io/AhilloPage",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "^10.12.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
